test/classes/diten/instantiatedClassname.good
instantiatedClassname.chpl:12: error: unresolved call 'foo(C(1,1,3))'
instantiatedClassname.chpl:7: note: candidates are: foo(c: C)
